--- a/LaTeX/eigeneransatz.tex
+++ b/LaTeX/eigeneransatz.tex
@@ -71,7 +71,7 @@ The process concept is realized in three stages. Each stage depends on the previ
 \bigskip
  First stage is finding the ink and ceramic properties, such as ink viscosity and surface tension, ceramic void fraction and ink absorption time. Depending on these experimentally acquired parameters the equations \ref{eq:InfTime} and \ref{eq:SpreadingDia} can be utilized  in the progress of the model generation for the drop deployment algorithm for an arbitrary pattern to be printed on the zirconia material. 
  
- Second stage is planned to help determine the parameters defining the printing system. It basically focuses on the settlement of drop properties and deployment metrics, which consist of drop volume, nozzle escape velocity of the drops, the optimal distance between the nozzle and zirconia surface and the angle between the drop projectile and the surface. The drop volume has to be determined as soon as possible, because it directly affects the selection of the actuator which is to be used as the drop ejector. Selection of a larger drop size means a shorter printing time. However it also means that the resolution is supposed to become lower. Due to the absorption characteristics of the zirconia material, a critical drop size is expected to cause a significant effect on the diameter of a painted spot. In other words, deploying the same amount of ink on the same spot using drops with a volume of smaller than 5 nL could give the same printed spot diameter.In comparison to the aforementioned drop volumes, using  10 or 20 nL drops to apply the same amount of ink on a single point could result with an unexpectedly larger spot size with lower central intensity. This critical drop size has to be determined, in order to proceed to the rest of the experiments.  
+ Second stage is planned to help determine the parameters defining the printing system. It basically focuses on the settlement of drop properties and deployment metrics, which consist of drop volume, nozzle escape velocity of the drops, the optimal distance between the nozzle and zirconia surface and the angle between the drop projectile and the surface. The drop volume has to be determined as soon as possible, because it directly affects the selection of the actuator which is to be used as the drop ejector. Selection of a larger drop size means a shorter printing time. However it also means that the resolution is supposed to become lower. Due to the absorption characteristics of the zirconia material, a critical drop size is expected to cause a significant effect on the diameter of a painted spot. In other words, deploying the same amount of ink on the same spot using drops with a volume of smaller than 5 nl could give the same printed spot diameter.In comparison to the aforementioned drop volumes, using  10 or 20 nl drops to apply the same amount of ink on a single point could result with an unexpectedly larger spot size with lower central intensity. This critical drop size has to be determined, in order to proceed to the rest of the experiments.  
  
  The projectile velocity of the drops is one of the most important parameters affecting the printing system on a temporal basis and also the spreading characteristics of the ink within the porous medium. It is known that for Weber numbers higher than 50, the drops are expected to splash upon the impact with the surface \citep{clarke2002spreading}.
  
@@ -161,7 +161,7 @@ Arrhenius-Andrade-Relation defines the viscosity of any Newtonian fluid dependin
 
 The exponential reduction of the viscosity  versus the proportional decrease of the surface tension would be expected to result with a cumulative decrease of the absorption time with climbing temperatures.
 
-Single drops with a volume of 100 nL are deployed on the sawn and milled surfaces. The time between the landing and complete absorption was measured 4 times for each surface structure at the temperatures 20\textdegree \space C, 30\textdegree \space C, 40\textdegree \space C, 60\textdegree \space C and 80\textdegree \space C.
+Single drops with a volume of 100 nl are deployed on the sawn and milled surfaces. The time between the landing and complete absorption was measured 4 times for each surface structure at the temperatures 20\textdegree \space C, 30\textdegree \space C, 40\textdegree \space C, 60\textdegree \space C and 80\textdegree \space C.
 
 \bigskip
 
@@ -188,7 +188,7 @@ The purpose of the third experiment is deciding for an adequate drop size. A lar
 \end{figure} 
 \bigskip
 
-In the figure \ref{fig:DropSize} one can see a printed zirconia specimen. Each spot on the upper half has a total ink volume of 800 nL and the ones on the bottom half 400 nL. These spots are printed using drops with volumes of 100, 50, 25 and 12.5 nL.The first image shows the spots right after printing. The second one shows the surface after furnacing.
+In the figure \ref{fig:DropSize} one can see a printed zirconia specimen. Each spot on the upper half has a total ink volume of 800 nl and the ones on the bottom half 400 nl. These spots are printed using drops with volumes of 100, 50, 25 and 12.5 nl.The first image shows the spots right after printing. The second one shows the surface after furnacing.
 
 \bigskip
 
@@ -201,13 +201,13 @@ In the figure \ref{fig:DropSize} one can see a printed zirconia specimen. Each s
 
 \bigskip
 
-The graphs show the ink intensity along the red lines and the spreading of the ink in lateral direction for each drop volume. 12.5 and 25 nL drops result in a similar spot diameter but the spots tend to get significantly larger with 50 and 100 nL Drops. Depending on these results 25nL can be selected as the optimum drop size for further experiments. However, considering to repeat some key procedures for the drop size of 50 nL can also be advantageous to gather further information.
+The graphs show the ink intensity along the red lines and the spreading of the ink in lateral direction for each drop volume. 12.5 and 25 nl drops result in a similar spot diameter but the spots tend to get significantly larger with 50 and 100 nl Drops. Depending on these results 25nL can be selected as the optimum drop size for further experiments. However, considering to repeat some key procedures for the drop size of 50 nl can also be advantageous to gather further information.
 
 \section{Proximity}
 
 The proximity effect describes in the case of dental printing the coloring of the unprinted area between two printed areas proximate to each other. The closer the printed areas are, the saturated becomes the unprinted area in between.
 
-If the color change of the unprinted area can be described depending on the ink concentration and distance between the printed areas, the effect of the proximity can be implemented to the model. During this experiment an exception is made and for the printing process a drop size of 12.5 nL is chosen. This is the smallest volume the printing system can generate stably, without spraying the ink in a circle or generating satellite droplets. The reason for selecting the smallest possible droplet volume is to rule out or at least minimize the lateral flow of the ink caused by the initial wetting area.  
+If the color change of the unprinted area can be described depending on the ink concentration and distance between the printed areas, the effect of the proximity can be implemented to the model. During this experiment an exception is made and for the printing process a drop size of 12.5 nl is chosen. This is the smallest volume the printing system can generate stably, without spraying the ink in a circle or generating satellite droplets. The reason for selecting the smallest possible droplet volume is to rule out or at least minimize the lateral flow of the ink caused by the initial wetting area.  
 
 \bigskip
 
@@ -252,7 +252,7 @@ The second pattern with the varying ink intensity contains a flaw. The lower lin
 
 \bigskip
 
-The purpose of the experiment was to define the optimum trace distance for various ink intensities. The result of the first pattern is to be utilized to confirm the integrity of the results of the second pattern. The ink distribution on the line, where the distance between the two lines is 5 mm in the first pattern, magenta line in the Figure \ref{fig:vmatch}, should be the same with the ink distribution along the red line on the second pattern in the Figure \ref{fig:vmatch} where the printing ink intensity is 1250 nl/mm. If the results would comply with each other, the optimum trace distance for any ink intensity could be calculated. However, the effect of the lateral diffusion was underestimated at time of planning the concept, which resulted with a divergent result that can be observed in the lower graph in the Figure	\ref{fig:vmatch}. The ink diffusing from the higher intensity regions on the right side increase the intensity of the regions on the left side, so that the color intensity distributed over the red line does not belong to the printing intensity of 1250 nL/mm.
+The purpose of the experiment was to define the optimum trace distance for various ink intensities. The result of the first pattern is to be utilized to confirm the integrity of the results of the second pattern. The ink distribution on the line, where the distance between the two lines is 5 mm in the first pattern, magenta line in the Figure \ref{fig:vmatch}, should be the same with the ink distribution along the red line on the second pattern in the Figure \ref{fig:vmatch} where the printing ink intensity is 1250 nl/mm. If the results would comply with each other, the optimum trace distance for any ink intensity could be calculated. However, the effect of the lateral diffusion was underestimated at time of planning the concept, which resulted with a divergent result that can be observed in the lower graph in the Figure	\ref{fig:vmatch}. The ink diffusing from the higher intensity regions on the right side increase the intensity of the regions on the left side, so that the color intensity distributed over the red line does not belong to the printing intensity of 1250 nl/mm.
 
 \bigskip
 
@@ -289,11 +289,11 @@ If the lateral momentum of the droplets are high enough at the moment of the imp
 
 In order to test the effect of printing on a skew surface two parallel lines are printed on the surface which have a distance of 4 mm. This process is repeated 4 times, while the zirconia specimen was standing at angles 0\textdegree \space, 15\textdegree \space, 30\textdegree \space and 45\textdegree \space. The printed sample can be seen in the Figure \ref{fig:angleprint}. The highest possible printing angle that could be required is defined by the dental technologists from the Bredent GmbH to be 30\textdegree \space because of the traditional parameters of the milling process. The maximum milling angle for the inner features of the crown is realized by a CNC with a machine tool angle of 30\textdegree \space to the crown axis. So the extension of the experiments up to a printing angle of 45\textdegree \space is slightly off the limits but necessary to be on the safe side.
 
-The lines were generated using 25 nL droplets with a drop density of 50 drops per mm. The thickness of the lines are measured as 2.2 $\pm$ 0.1 mm. The measurements of the thicknesses as 2.2 mm on the specimen belong to the blue lines, which present the contact area on the zirconia with the ink. 2.2 mm is not the thickness of the lines after the sintering process. The consistency of the thicknesses at all angles is enough for the observer to draw the conclusion that the printing angles up to 45\textdegree \space do not cause any significant change in the printed pattern. If the wetted surface on the zirconia is the same for all of the printing angles, the possibility of observing different line properties after the sintering process is quite close to zero.
+The lines were generated using 25 nl droplets with a drop density of 50 drops per mm. The thickness of the lines are measured as 2.2 $\pm$ 0.1 mm. The measurements of the thicknesses as 2.2 mm on the specimen belong to the blue lines, which present the contact area on the zirconia with the ink. 2.2 mm is not the thickness of the lines after the sintering process. The consistency of the thicknesses at all angles is enough for the observer to draw the conclusion that the printing angles up to 45\textdegree \space do not cause any significant change in the printed pattern. If the wetted surface on the zirconia is the same for all of the printing angles, the possibility of observing different line properties after the sintering process is quite close to zero.
 
 \section{Singular Spot Characteristics}
 
-Since the efforts to determine the characteristics via continuous lines did not provide conclusive results because of the ink diffusion inside the porous material, discontinuous, isolated imprints are required as a further experiment. 8 Spots are to be printed with an equidistant placement. The distances between the spots are 8 mm which is beyond the diffusion range of the relative ink amounts. 25 nL drops and 50 nL drops are deployed on two different specimen to observe the effect of the droplet size depending on the total ink volume. 
+Since the efforts to determine the characteristics via continuous lines did not provide conclusive results because of the ink diffusion inside the porous material, discontinuous, isolated imprints are required as a further experiment. 8 Spots are to be printed with an equidistant placement. The distances between the spots are 8 mm which is beyond the diffusion range of the relative ink amounts. 25 nl drops and 50 nl drops are deployed on two different specimen to observe the effect of the droplet size depending on the total ink volume. 
 
 The drops are expected to have a high color intensity in the middle. That middle point is going to be the center of the Gaussian distribution. The points with an equal distance from the middle are supposed to present a point symmetrically identical color intensity.
 
@@ -310,7 +310,7 @@ The drops are expected to have a high color intensity in the middle. That middle
 
 The Figure \ref{fig:psfprint} presents both of the printed zirconia plates before the sintering process combined with additional tables to sort the properties of each printed spot in a well defined manner. 
 
-In order to inspect the Gaussian distributions of the ink intensities in cases of different total ink amounts and different drop sizes 8 spots are printed using drops with volumes of 25 nL and 50 nL. The total ink volumes for the spots on each plate are identical and equal to 200 nL, 400 nL, 800 nL, 1200 nL, 1600 nL, 2000 nL, 2400 nL and 2800 nL.
+In order to inspect the Gaussian distributions of the ink intensities in cases of different total ink amounts and different drop sizes 8 spots are printed using drops with volumes of 25 nl and 50 nl. The total ink volumes for the spots on each plate are identical and equal to 200 nl, 400 nl, 800 nl, 1200 nl, 1600 nl, 2000 nl, 2400 nl and 2800 nl.
 \begin{comment}
 The results of this experiment are necessary for the reverse calculation of the required ink amount. Depending on the calculations a map can be generated for the amount of drops and target positions to deploy these drop, in order to acquire a desired shade distribution as an outcome.  
 \end{comment}
@@ -326,7 +326,7 @@ The calibration of the lowest intensity is made because of the mentioned reason 
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=0.5\textwidth]{grafiken/drops25.eps}
-	\caption{False color representation and shade spreading analysis of the spots after sintering (printed with 25 nL drops)}
+	\caption{False color representation and shade spreading analysis of the spots after sintering (printed with 25 nl drops)}
 	\label{fig:drops25}
 \end{figure} 
 
@@ -334,24 +334,24 @@ The calibration of the lowest intensity is made because of the mentioned reason 
 
 Due to the nonlinear printing characteristics of the porous zirconia medium, a proportional intensity change cannot be observed along increasing total ink amounts. As a reminder, it should be said that the printing process is realized using an ink with a calibrated shade of A3.5. This means if the zirconia plate is sunk into the ink completely and hold in the ink for at least 10 seconds so that there is relatively no air left in the porous medium, the end color shade of the zirconia would be an A3.5. This global void filling condition can also be fulfilled locally with the inevitable occurrence of some lateral diffusion. 
 
-There are two parameters one should pay attention to on the plots positioned on the right side of the Figure \ref{fig:drops25}. One of them is the shade, the other one is the Full Width Half Maximum (FWHM) measurement of the spots. Each plot belongs to the line on the false colored image, on the same height with the plot. The applied amount of ink on the first spot is 200 nL. Even though the plot has a global maximum around A1.75, the results are not trustworthy, because of the noise level on the line. The areas close to the edges reach easily 50\% of the global maximum which is a sign of low signal to noise ratio and is caused by extremely low amount of the applied ink. 
+There are two parameters one should pay attention to on the plots positioned on the right side of the Figure \ref{fig:drops25}. One of them is the shade, the other one is the Full Width Half Maximum (FWHM) measurement of the spots. Each plot belongs to the line on the false colored image, on the same height with the plot. The applied amount of ink on the first spot is 200 nl. Even though the plot has a global maximum around A1.75, the results are not trustworthy, because of the noise level on the line. The areas close to the edges reach easily 50\% of the global maximum which is a sign of low signal to noise ratio and is caused by extremely low amount of the applied ink. 
 
-The spots with total ink amounts of 1600 nL and 2000 nL present the same FWHM value which is equal to 3.5 mm. The 1600 nL total ink amount brings the graph just below the shade A3.5, but the total ink amount 2000 nL reaches the shade A3.5 with a constant level plateau. This means 2000 nL is the critical value for full saturation under lateral diffusion conditions. A higher amount of ink causes only a proportionally larger FWHM. For 25nL Drops it can be said that different shades can be obtained using an ink with the shade A4.0 and a brightener with a total amount of 2000 nL on each spot.
+The spots with total ink amounts of 1600 nl and 2000 nl present the same FWHM value which is equal to 3.5 mm. The 1600 nl total ink amount brings the graph just below the shade A3.5, but the total ink amount 2000 nl reaches the shade A3.5 with a constant level plateau. This means 2000 nl is the critical value for full saturation under lateral diffusion conditions. A higher amount of ink causes only a proportionally larger FWHM. For 25nL Drops it can be said that different shades can be obtained using an ink with the shade A4.0 and a brightener with a total amount of 2000 nl on each spot.
 
 \bigskip
 
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=0.5\textwidth]{grafiken/drops50.eps}
-	\caption{False color representation and shade spreading analysis of the spots after sintering (printed with 50 nL drops)}
+	\caption{False color representation and shade spreading analysis of the spots after sintering (printed with 50 nl drops)}
 	\label{fig:drops50}
 \end{figure} 
 
 \bigskip 
- The same experiment is repeated for the drop size of 50 nL with the half amount of drops to achieve the same total ink amount. The only practical difference between the experiments is the diameter of the first contact circle. When the first wetting area is larger the ink tries to impregnate the zirconia through a larger area which means that the lateral diffusion is supposed to happen easier and the FWHM diameters are to be slightly larger than the ones belonging to the 25 nL droplets depending on the Equation \ref{eq:SpreadingDia} . It is hard to conduct a comparative evaluation for the first four spots from the top because of the high noise generated by the crack in the first specimen. 
+ The same experiment is repeated for the drop size of 50 nl with the half amount of drops to achieve the same total ink amount. The only practical difference between the experiments is the diameter of the first contact circle. When the first wetting area is larger the ink tries to impregnate the zirconia through a larger area which means that the lateral diffusion is supposed to happen easier and the FWHM diameters are to be slightly larger than the ones belonging to the 25 nl droplets depending on the Equation \ref{eq:SpreadingDia} . It is hard to conduct a comparative evaluation for the first four spots from the top because of the high noise generated by the crack in the first specimen. 
  
- The spot created with 1600 nL ink has a lower shade level in comparison because of the higher diffusion distance of the ink caused by the larger initial contact. If the initial contact area is larger, the ink is transfered beneath this larger area into the zirconia material. After the impregnation the diffusion can happen beginning from a comparatively larger area which means that the ink can reach further away, but with less intensity. Since the ink is distributed more to the outer circles, the intensity of the 1600 nL spot is lower for 50 nL drops in comparison to 25 nL ones.
+ The spot created with 1600 nl ink has a lower shade level in comparison because of the higher diffusion distance of the ink caused by the larger initial contact. If the initial contact area is larger, the ink is transfered beneath this larger area into the zirconia material. After the impregnation the diffusion can happen beginning from a comparatively larger area which means that the ink can reach further away, but with less intensity. Since the ink is distributed more to the outer circles, the intensity of the 1600 nl spot is lower for 50 nl drops in comparison to 25 nl ones.
   
- The total ink amount of 2000 nL is again enough for the full saturation of the pores. The predefined shade of A3.5 is reached with a large plateau as a sign for the saturated spot imprint with an FWHM of 3.9 mm. The FWHM values for the ink amounts 2000 nL, 2400nL and 2800 nL in the first experiment were, as it can be seen in Figure \ref{fig:drops25}, 3.5 mm, 4.2 mm and 4.4 mm. Those values are 3.9 mm, 4.2 mm and 4.4 mm in the second experiment. The fact that the last two diameters are exactly the same for both of the drop sizes shows that an amount of total ink this high is significantly over the saturation limit of the spot area. 
+ The total ink amount of 2000 nl is again enough for the full saturation of the pores. The predefined shade of A3.5 is reached with a large plateau as a sign for the saturated spot imprint with an FWHM of 3.9 mm. The FWHM values for the ink amounts 2000 nl, 2400nL and 2800 nl in the first experiment were, as it can be seen in Figure \ref{fig:drops25}, 3.5 mm, 4.2 mm and 4.4 mm. Those values are 3.9 mm, 4.2 mm and 4.4 mm in the second experiment. The fact that the last two diameters are exactly the same for both of the drop sizes shows that an amount of total ink this high is significantly over the saturation limit of the spot area. 
  
- There is another important result one can conclude out of these two samples. If the printing process was done with a color shade of A4.0 and the target shade was A4.0 ,the whole void proportion of the material would have to be filled with the ink for the shade A4.0. Whether the drops have a volume of 25 nL or 50 nL doesn't change the fact that the material has to be filled up regionally and this will cause inevitable  lateral diffusions. Thus it is not quite likely to obtain A4.0 spots as tiny as A1.0 spots using an ink with a shade of A4.0. Because in the upper plots of the Figures \ref{fig:drops25} and \ref{fig:drops50}it can be observed that the spots have shades below A1.75 and the FWHM values are less than or equal to the half of the saturated A4.0 generating spot diameters.
+ There is another important result one can conclude out of these two samples. If the printing process was done with a color shade of A4.0 and the target shade was A4.0 ,the whole void proportion of the material would have to be filled with the ink for the shade A4.0. Whether the drops have a volume of 25 nl or 50 nl doesn't change the fact that the material has to be filled up regionally and this will cause inevitable  lateral diffusions. Thus it is not quite likely to obtain A4.0 spots as tiny as A1.0 spots using an ink with a shade of A4.0. Because in the upper plots of the Figures \ref{fig:drops25} and \ref{fig:drops50}it can be observed that the spots have shades below A1.75 and the FWHM values are less than or equal to the half of the saturated A4.0 generating spot diameters.
